# pdf-split-naming-tool

./: .gitignore  README.md  start-dev.cmd  start-web.cmd
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: 01_要件定義書.md  02_実装計画書.md  03_技術方針書.md  04_移行ロードマップ.md  05_実装状況.md  2026-05-19_アプリ仕様書.md  2026-05-19_初期調査メモ.md  2026-05-19_配布前チェックリスト.md  README.md  (+9 more)
recovery/: README.md  pyproject.toml
recovery/pdf_splitter_tool/: __init__.py  __main__.py  app.py  app_metadata.py  domain.py  export_policy.py  history.py  models.py  output_controller.py  pdf_service.py  preset_editing.py  preset_manager_dialog.py  presets.py  processor.py  runtime.py  sidecar.py  state.py  state_schema.py  step2_controller.py  ui_theme.py  workflow.py
recovery/scripts/: build_distribution.ps1  gui_smoke.py
recovery/tests/: test_app_shortcuts.py  test_desktop_shell_contract.py  test_domain.py  test_export_edge_cases.py  test_export_policy.py  test_export_service.py  test_history.py  test_iss030_nf.py  test_output_name_parity.py  test_pdf_service.py  test_phase12_smoke.py  test_preset_editing.py  test_presets_state.py  test_processor.py  test_runtime_paths.py  test_sidecar.py  test_sidecar_contract.py  test_sidecar_serve.py  test_state_compat.py  test_state_recovery.py  test_state_recovery_failures.py  test_state_schema.py  test_tc_cb_codebase.py  test_workflow.py
recovery/tests/fixtures/state/: legacy_no_schema.json  missing_pdf_path.json  unknown_keys.json  v1_full_fields.json
(+119 files in other folders)
