[project]
name = "pdf-split-naming-tool-recovery"
version = "0.1.0"
description = "Recovered PDF split and naming tool with preset-based naming."
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.24",
  "Pillow>=10",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
