[package]
name = "pdf-organizer-desktop"
version = "0.1.7"
edition = "2021"

[lib]
name = "pdf_organizer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.2"
